sandc/test/fixtures/astRegression/shouldFail/productions/tryPseudex/TryStatementInPlaceOfTryPseudex.sand
pub class TryStatementInPlaceOfTryPseudex {
    foo() {
        let a = try {
            foo();
        } catch e: Foo {
            foo();
        };
    }
}